--- a/workshop/reactApp/package.json
+++ b/workshop/reactApp/package.json
@@ -19,6 +19,7 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "events": "^1.1.0",
     "flux": "^2.1.1",
     "google-maps-api": "^1.1.0",
     "object-assign": "^4.0.1",
